--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/gti-sos/SOS1920-11#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "save": "^2.4.0"
+    "express": "^4.17.1"
   }
 }
