--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "paquete del servidor express",
   "main": "index.js",
   "scripts": {
+	"build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
   },
   "repository": {
     "type": "git",
