--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.22.0"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
-    "path-to-regexp": "^6.1.0"
+    "path-to-regexp": "^6.1.0",
+    "svelte-spa-router": "^2.1.0",
+    "sveltestrap": "^3.3.3"
   }
 }
