--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nedb": "^1.8.0",
     "path-to-regexp": "^6.1.0",
     "svelte-spa-router": "^2.1.0",
-    "sveltestrap": "^3.3.3"
+    "sveltestrap": "^3.3.3",
+    "request": "2.58.x"
   }
 }
