--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/gti-sos/SOS1920-11#readme",
   "dependencies": {
+    "apexcharts": "^3.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
